# chromadesk

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  build.sh  installer.sh  pyproject.toml  python.AppImage
.github/workflows/: lint_format.yml  pull_request.yml  release.yml
chromadesk/: __init__.py  __main__.py  headless.py  main.py
chromadesk/core/: bing.py  config.py  downloader.py  history.py  wallpaper.py
chromadesk/services/: manager.py
chromadesk/services/templates/: chromadesk-daily.service.in  chromadesk-daily.timer.in
chromadesk/ui/: main_window.py
data/: io.github.anantdark.chromadesk.desktop
tests/: __init__.py  test_basics.py
